<resources>
    <string name="app_name">FUTEBOL</string>
    <string name="menu_jogador">Jogador</string>
    <string name="menu_time">Time</string>
    <string name="codigo">Codigo:</string>
    <string name="nome">Nome:</string>
    <string name="cidade">Cidade:</string>
    <string name="id">ID:</string>
    <string name="dataNasc"> Data de Nascimento:</string>
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="time">Time:</string>
    <string name="buscar">Buscar</string>
    <string name="inserir">Inserir</string>
    <string name="deletar">Deletar</string>
    <string name="atualizar">Atualizar</string>
    <string name="listar">Listar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>